--- a/pythonanywhere/templates/home.html
+++ b/pythonanywhere/templates/home.html
@@ -1398,6 +1398,13 @@
                     <li><a href="https://www.pythonanywhere.com/" target="_blank"><i class="fas fa-server"></i> Hosted on PythonAnywhere</a></li>
                 </ul>
             </div>
+            <div class="footer-column">
+                <h3>Privacy en TOS</h3>
+                <ul class="footer-links">
+                    <li><a href="/privacy">Privacy policy</a></li>
+                    <li><a href="/tos">Terms of Service</a></li>
+                </ul>
+            </div>
         </div>
         <div class="copyright">
             <p>&copy; 2025 Future Notes</p>
