--- a/pythonanywhere/templates/home.html
+++ b/pythonanywhere/templates/home.html
@@ -1399,10 +1399,10 @@
                 </ul>
             </div>
             <div class="footer-column">
-                <h3>Privacy en TOS</h3>
+                <h3>Privacy and TOS</h3>
                 <ul class="footer-links">
-                    <li><a href="/privacy">Privacy policy</a></li>
-                    <li><a href="/tos">Terms of Service</a></li>
+                    <li><a href="https://bosbes.eu.pythonanywhere.com/privacy">Privacy policy</a></li>
+                    <li><a href="https://bosbes.eu.pythonanywhere.com/tos">Terms of Service</a></li>
                 </ul>
             </div>
         </div>
