--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -837,6 +837,7 @@
           <a href="/group-notes" class="nav-link">Group notes</a>
           <a href="/scheduler-page" class="nav-link">Calendar</a>
           <a href="/todo_page" class="nav-link">Todo</a>
+          <a href="/flow_page" class="nav-link">Flow</a>
         </nav>
         <div id="profile-pic" class="profile-pic no-picture"></div>
       </header>
@@ -846,6 +847,7 @@
         <a href="/group-notes" class="nav-link">Group notes</a>
         <a href="/scheduler-page" class="nav-link">Calendar</a>
         <a href="/todo_page" class="nav-link">Todo</a>
+        <a href="/flow_page" class="nav-link">Flow</a>
       </nav>      
 
     <main>
