--- a/pythonanywhere/templates/todo.html
+++ b/pythonanywhere/templates/todo.html
@@ -517,6 +517,7 @@
       <a href="/group-notes" class="nav-link">Group notes</a>
       <a href="/scheduler-page" class="nav-link">Calendar</a>
       <a href="/todo_page" class="nav-link active">Todo</a>
+      <a href="/flow_page" class="nav-link">Flow</a>
     </nav>
     
     <div id="profile-pic" class="profile-pic no-picture"></div>
@@ -528,6 +529,7 @@
     <a href="/group-notes" class="nav-link">Group notes</a>
     <a href="/scheduler-page" class="nav-link">Calendar</a>
     <a href="/todo_page" class="nav-link active">Todo</a>
+    <a href="/flow_page" class="nav-link">Flow</a>
   </nav>  
 
   <div id="overlay"></div>
