--- a/pythonanywhere/templates/group_index.html
+++ b/pythonanywhere/templates/group_index.html
@@ -1004,6 +1004,7 @@
             <a href="/group-notes" class="nav-link active">Group notes</a>
             <a href="/scheduler-page" class="nav-link">Calendar</a>
             <a href="/todo_page" class="nav-link">Todo</a>
+            <a href="/flow_page" class="nav-link">Flow</a>
         </nav>
         <div id="profile-pic" class="profile-pic no-picture"></div>
     </header>
@@ -1013,6 +1014,7 @@
         <a href="/group-notes" class="nav-link active">Group notes</a>
         <a href="/scheduler-page" class="nav-link">Calendar</a>
         <a href="/todo_page" class="nav-link">Todo</a>
+        <a href="/flow_page" class="nav-link">Flow</a>
     </nav>        
 
     <main>
