--- a/pythonanywhere/templates/scheduler.html
+++ b/pythonanywhere/templates/scheduler.html
@@ -1153,6 +1153,7 @@
       <a href="/group-notes" class="nav-link">Group notes</a>
       <a href="/scheduler-page" class="nav-link active">Calendar</a>
       <a href="/todo_page" class="nav-link">Todo</a>
+      <a href="/flow_page" class="nav-link">Flow</a>
     </nav>
     
     <div id="profile-pic" class="profile-pic no-picture"></div>
@@ -1164,6 +1165,7 @@
     <a href="/group-notes" class="nav-link">Group notes</a>
     <a href="/scheduler-page" class="nav-link active">Calendar</a>
     <a href="/todo_page" class="nav-link">Todo</a>
+    <a href="/flow_page" class="nav-link">Flow</a>
   </nav>  
 
   <div id="overlay"></div>
