--- a/pythonanywhere/templates/flow.html
+++ b/pythonanywhere/templates/flow.html
@@ -164,30 +164,30 @@
         
         .mobile-sub-header {
             display: none;
-            background-color: var(--hdr-color);
+            background-color: var(--bg-color);
             padding: 10px 0;
             text-align: center;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-        }
-        
-        .mobile-sub-header a {
+            }
+
+            .mobile-sub-header a {
             display: block;
             color: white;
             text-decoration: none;
             padding: 10px;
             font-size: 18px;
-        }
-        
-        .mobile-sub-header a.active::after {
+            }
+
+            .mobile-sub-header a.active::after {
             content: "";
             display: block;
             height: 2px;
             width: 100%;
             background-color: white;
         }
-        
+
         .mobile-sub-header a:hover::after {
-            background-color: lightgray;
+        background-color: lightgray;
         }
         
         .profile-pic {
@@ -660,6 +660,35 @@
             --btn-color: #424242;
             --success-color: #5cb85c;
             --danger-color: #d9534f;
+        }
+
+        @media (max-width: 600px) {
+            .desktop-nav {
+                display: none;
+            }
+            
+            .mobile-header {
+                display: flex;
+            }
+            
+            .toggle-mobile-nav {
+                display: block;
+            }
+            
+            .homepage-link {
+                display: none;
+            }
+            #search-input {
+                width: 95%;
+            }
+            #add-menu button {
+                padding: 4px;
+            }
+
+            #update-menu button {
+                padding: 4px;
+            }
+
         }
     </style>
     <script>
