--- a/pythonanywhere/templates/account.html
+++ b/pythonanywhere/templates/account.html
@@ -11,6 +11,7 @@
     <link rel="favicon" type="image/x-icon" href="static/favicon.ico">
     <link rel="manifest" href="static/site.webmanifest">
     <script src="/static/js/loader.js"></script>
+    <script src="/static/js/check.js"></script>
     <style>
         /* Globale reset en variabelen */
         *, *::before, *::after {
