--- a/pythonanywhere/templates/battle.html
+++ b/pythonanywhere/templates/battle.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="theme-color" content="#ADD8E6">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="/static/js/check.js"></script>
   <title>Zeeslag - Game</title>
   <style>
     /* Global styling */
