--- a/pythonanywhere/templates/checks.html
+++ b/pythonanywhere/templates/checks.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Supermode</title>
+  <script src="/static/js/check.js"></script>
   <style>
     :root {
       --bg: #1e1e2e;
