--- a/pythonanywhere/templates/flow.html
+++ b/pythonanywhere/templates/flow.html
@@ -10,6 +10,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16x16.png">
     <link rel="favicon" type="image/x-icon" href="static/favicon.ico">
     <link rel="manifest" href="static/site.webmanifest">
+    <script src="/static/js/loader.js"></script>
+    <script src="/static/js/check.js"></script>
     
     <!-- Mermaid.js for graph visualization -->
     <script src="https://cdn.jsdelivr.net/npm/mermaid@9.3.0/dist/mermaid.min.js"></script>
