--- a/pythonanywhere/templates/mutations.html
+++ b/pythonanywhere/templates/mutations.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Mutation Log</title>
+  <script src="/static/js/check.js"></script>
   <style>
     body { font-family: sans-serif; padding: 1em; }
     table { border-collapse: collapse; width: 100%; margin-top: 1em; }
