--- a/pythonanywhere/templates/passwordreset.html
+++ b/pythonanywhere/templates/passwordreset.html
@@ -10,6 +10,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16x16.png">
     <link rel="favicon" type="image/x-icon" href="static/favicon.ico">
     <link rel="manifest" href="/static/site.webmanifest">
+    <script src="/static/js/loader.js"></script>
+    <script src="/static/js/check.js"></script>
     <style>
         /* Use the same CSS as your signup page */
         body {
