--- a/pythonanywhere/templates/setup.html
+++ b/pythonanywhere/templates/setup.html
@@ -7,6 +7,7 @@
   <!-- Include a Google Font for a modern look -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="/static/js/check.js"></script>
   <style>
     /* Global Styles */
     body {
