--- a/pythonanywhere/templates/database_viewer.html
+++ b/pythonanywhere/templates/database_viewer.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Database Viewer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="/static/js/check.js"></script>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
