--- a/pythonanywhere/templates/home_dutch.html
+++ b/pythonanywhere/templates/home_dutch.html
@@ -10,6 +10,7 @@
   <meta name="theme-color" content="#121212">
   <link rel="canonical" href="https://bosbes.eu.pythonanywhere.com/">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <script src="/static/js/check.js"></script>
   <meta name="google-site-verification" content="vBSViwn_En_engn8t-u5fGXCxi32UGP8P4NZN2kIuuM" />
   <script type="application/ld+json">
   {
