--- a/pythonanywhere/templates/leaderboard.html
+++ b/pythonanywhere/templates/leaderboard.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Leaderboard</title>
+  <script src="/static/js/check.js"></script>
   <style>
     body {
       font-family: 'Roboto', sans-serif;
