--- a/pythonanywhere/templates/version_management.html
+++ b/pythonanywhere/templates/version_management.html
@@ -133,8 +133,8 @@
                         <div class="card-body">
                             <div class="d-flex justify-content-between mb-3">
                                 <select class="form-select w-25" id="branch-select">
-                                    <option value="main">main</option>
-                                    <option value="dev">dev</option>
+                                    <option value="master">Master</option>
+                                    <option value="dev">Dev</option>
                                 </select>
                                 <button class="btn btn-primary" id="refresh-commits">
                                     <i class="bi bi-arrow-repeat me-2"></i>Refresh
@@ -161,14 +161,14 @@
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <select class="form-select" id="pr-base">
-                                        <option value="main">Base: main</option>
+                                        <option value="master">Base: master</option>
                                         <option value="dev">Base: dev</option>
                                     </select>
                                 </div>
                                 <div class="col-md-6">
                                     <select class="form-select" id="pr-head">
                                         <option value="dev">Head: dev</option>
-                                        <option value="main">Head: main</option>
+                                        <option value="master">Head: master</option>
                                     </select>
                                 </div>
                             </div>
