--- a/pythonanywhere/templates/home_dutch.html
+++ b/pythonanywhere/templates/home_dutch.html
@@ -1203,6 +1203,16 @@
                     <a href="#" class="feature-btn">Meer info <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
+            <div class="feature-card" data-feature="flow">
+                <div class="feature-icon" style="background: linear-gradient(45deg, #4527a0, #00d4c7);">
+                    <i class="fas fa-code-branch"></i>
+                </div>
+                <div class="feature-content">
+                    <h3>Flow Module</h3>
+                    <p>Volg de voortgang van je project met een uniek systeem geïnspireerd op Git, maar gericht op impactpunten in plaats van code. Maak branches aan, voeg werk samen en stel een totaal impactdoel in om te visualiseren wanneer je project klaar is. Perfect voor gezamenlijke planning en het bijhouden van mijlpalen.</p>
+                    <a href="#" class="feature-btn">Meer info <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -1335,6 +1345,31 @@
                             <li>Beheerderscontrole voor groepinstellingen</li>
                             <li>Onbeperkte groepen per gebruiker</li>
                             <li>Makkelijk gebruikers uitnodigen</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal" id="flow-modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3><i class="fas fa-code-branch"></i> Flow Module</h3>
+                <button class="close-modal"><i class="fas fa-times"></i></button>
+            </div>
+            <div class="modal-body">
+                <div class="feature-details">
+                    <p>De Flow Module is een unieke functie waarmee je de voortgang van je project kunt volgen via een systeem geïnspireerd op Git, maar dan gericht op impactpunten in plaats van code.</p>
+                    <p>Het biedt een visuele weergave van de status van je project en helpt je bijdragen van meerdere gebruikers te beheren.</p>
+                    <div class="feature-benefits">
+                        <h4>Belangrijkste functies:</h4>
+                        <ul class="benefits-list">
+                            <li>Aanmaken van branches voor verschillende projectfases</li>
+                            <li>Impactpunten bijhouden per branch</li>
+                            <li>Branches samenvoegen om werk te combineren</li>
+                            <li>Visualisatie van het totale impactdoel</li>
+                            <li>Samen plannen en mijlpalen volgen</li>
                         </ul>
                     </div>
                 </div>
